Optimize compile and build process